# com.aexoden.ff4kb

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.json  devbox.json  manage.py  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml
data/: formations.json  monsters.json
data/routes/cw/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  (+216 more)
data/routes/glitchless/: 000.txt  001.txt  003.txt  004.txt  006.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  015.txt  017.txt  018.txt  020.txt  021.txt  024.txt  026.txt  028.txt  030.txt  031.txt  032.txt  034.txt  036.txt  037.txt  039.txt  040.txt  043.txt  045.txt  048.txt  051.txt  053.txt  057.txt  059.txt  061.txt  064.txt  065.txt  068.txt  069.txt  070.txt  (+104 more)
data/routes/glitchless-no-manip/: 001.txt  002.txt  004.txt  005.txt  008.txt  011.txt  012.txt  014.txt  015.txt  017.txt  018.txt  019.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  031.txt  033.txt  036.txt  037.txt  038.txt  039.txt  042.txt  043.txt  045.txt  046.txt  049.txt  050.txt  051.txt  052.txt  053.txt  054.txt  055.txt  057.txt  058.txt  060.txt  (+105 more)
data/routes/marathon-no64-drain/: 003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  013.txt  014.txt  017.txt  018.txt  021.txt  023.txt  024.txt  026.txt  028.txt  032.txt  034.txt  035.txt  037.txt  038.txt  040.txt  041.txt  042.txt  043.txt  045.txt  046.txt  047.txt  051.txt  054.txt  056.txt  057.txt  058.txt  059.txt  061.txt  062.txt  063.txt  065.txt  066.txt  068.txt  071.txt  (+85 more)
data/routes/marathon-no64-excalbur/: 000.txt  001.txt  002.txt  003.txt  006.txt  008.txt  014.txt  015.txt  017.txt  019.txt  020.txt  025.txt  026.txt  027.txt  028.txt  032.txt  034.txt  035.txt  039.txt  040.txt  044.txt  050.txt  051.txt  055.txt  059.txt  060.txt  061.txt  069.txt  076.txt  078.txt  079.txt  081.txt  084.txt  085.txt  086.txt  088.txt  089.txt  091.txt  093.txt  094.txt  (+76 more)
data/routes/marathon-no64-excalbur-bosses/: 003.txt  004.txt  006.txt  007.txt  008.txt  009.txt  011.txt  012.txt  015.txt  016.txt  018.txt  019.txt  021.txt  022.txt  023.txt  024.txt  026.txt  027.txt  030.txt  032.txt  033.txt  034.txt  036.txt  037.txt  042.txt  045.txt  046.txt  048.txt  050.txt  055.txt  057.txt  058.txt  060.txt  061.txt  062.txt  063.txt  066.txt  068.txt  070.txt  076.txt  (+100 more)
data/routes/no64-drain/: 001.txt  002.txt  004.txt  006.txt  008.txt  012.txt  015.txt  016.txt  018.txt  019.txt  021.txt  022.txt  024.txt  031.txt  (+131 more)
ff4/: settings.py  urls.py  wsgi.py
ff4/data/: items.json  monsters.json  scripts.json  spells.json
ff4/guides/: urls.py
ff4/info/: urls.py  views.py
ff4/routes/: models.py  urls.py  views.py
ff4/templates/: base.html  index.html
ff4/tools/: urls.py  views.py
rosa/: rosa
scripts/: dump_ff4_data.py  healthcheck.py
src/ff4kb/: __init__.py  settings.py  urls.py  wsgi.py
(+7880 files in other folders)
