[tool.poetry]
name = "ff4"
version = "1.0.0"
description = "ff4kb.aexoden.com"
authors = ["Jason Lynch <jason@aexoden.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
dj-database-url = "^2.2.0"
django-configurations = "^2.5"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
django4-bootstrap-breadcrumbs = "^0.10.0"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
pylint = "^3.3.1"
flake8 = "^7.1.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
