[project]
name = "ff4kb"
version = "1.0.0"
description = "ff4kb.aexoden.com"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jason Lynch", email = "jason@aexoden.com" }]
dependencies = [
  "dj-database-url>=3.1.2",
  "django>=6.0.3",
  "django-configurations>=2.5.1",
  "django-debug-toolbar>=6.2.0",
  "django-extensions>=4.1",
  "django4-bootstrap-breadcrumbs>=0.10.0",
  "gunicorn>=25.1.0",
  "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["ff4"]

[tool.poetry]
#
# Ruff
#

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)SPDX-FileCopyrightText: \\d{4}"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
